[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/TurretCreationUI.gd" type="Script" id=1]
[ext_resource path="res://Sprites/GUI/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/Defenses/Turret/TurretBase.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Defenses/QuadLaserTurret/QuadLaserTurretBarrel.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 2 )

[node name="TurretCreationUI" type="MarginContainer"]
pause_mode = 2
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 320.0
margin_bottom = 25.0

[node name="BasicTurretButton" type="Button" parent="HBoxContainer"]
pause_mode = 2
margin_right = 101.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Basic"
icon = ExtResource( 3 )

[node name="LaserTurretButton" type="Button" parent="HBoxContainer"]
margin_left = 105.0
margin_right = 206.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Laser"
icon = ExtResource( 3 )

[node name="QuadLaserTurretButton" type="Button" parent="HBoxContainer"]
margin_left = 210.0
margin_right = 319.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Quad Laser"
icon = ExtResource( 4 )

[connection signal="pressed" from="HBoxContainer/BasicTurretButton" to="." method="_on_BasicTurretButton_pressed"]
[connection signal="pressed" from="HBoxContainer/LaserTurretButton" to="." method="_on_LaserTurretButton_pressed"]
[connection signal="pressed" from="HBoxContainer/QuadLaserTurretButton" to="." method="_on_QuadLaserTurretButton_pressed"]
